Summary: Commit before push to looseleaf/catpoo -------------------------------------------------- I was tired and needed to get this pushed up.
[Save commit]

--- a/00_acatpoo/00_Yoeman.html
+++ b/00_acatpoo/00_Yoeman.html
@@ -61,10 +61,9 @@ I wanted to enforce as much automation and pattern re-use as possible, so lets u
   - Now, init our new dir
   - git init
   - git add *
-  - git commit -m ""
-  
+  - git commit  
 
-###### From-> [00_Yoeman](00_Yoeman.html) To-> [00_Angular_CCC_consumeNav](00_Angular_CCC_consumeNav.html)
+###### From-> [00_Yoeman](00_Yoeman.html) To-> [00_Angular_CCCNav](00_Angular_CCCNav.html)
 
 </xmp>
 <script src="strapdown.js"></script>
