--- a/00_acatpoo/README.html
+++ b/00_acatpoo/README.html
@@ -8,7 +8,18 @@
 | --- | --- | ---- | -- | --- |
 | 1 | 2013.08.27 | [README](README.html) | cat |
 | 2 | 2013.08.27 | [00_Yoeman](00_Yoeman.html) | cat |
-| 3 | 2013.08.27 | [00_Angular_CCC_consumeNav](00_Angular_CCC_consumeNav.html) | cat |
+| 3 | 2013.08.27 | [00_Angular_CCCNav](00_Angular_CCCNav.html) | cat |
+| 4 | 2013.08.28 | [00_Angular_mainmenu](00_Angular_mainmenu.html) | cat |
+| 5 | 2013.08.28 | [00_Angular_rvcpatterns](00_Angular_rvcpatterns.html) | cat |
+
+## Quick Resources
+ * [Markdown Cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
+ * [Bootsnipp](http://bootsnipp.com/snipps/select-users) - bootstrap patterns
+ * [Bootstrap - Docs](http://getbootstrap.com/2.3.2/base-css.html#tables)
+ * [Angular-ui or ui-bootstrap](http://angular-ui.github.io/bootstrap/)
+ * [AngularStrap](http://mgcrea.github.io/angular-strap/#/navbar)
+ * [AngularAPI](http://docs.angularjs.org/api/ng.directive:ngClick)
+ * [catpoo - app](http://localhost:9000/#/projects) where catpoo is using grunt server
 
 ## Research markdown editors
  * [78 Markdown Tools](http://mashable.com/2013/06/24/markdown-tools/) which I pulled from
@@ -29,7 +40,6 @@
 ## Research File management
  * [node.js](http://nodejs.org) sort of defacto standard now
  * [grunt.js](http://gruntjs.com) sort of defacto build system now
- *
 
 ## Research on style stuff
  * [bootstrap stuff](http://www.queness.com/post/11632/18-useful-twitter-boostrap-goodies-you-should-know) Creating custom bootstrap style stuff
@@ -38,23 +48,19 @@
 # Ideas to sort
 Some ideas on structure I need to parse and document
 
-## Layout
-Layout is really about context, that is controlling the focus of the eye through visual que's (symbols and positioning).  That said, really we have 2 basic things with a webpage - view and navigation.  Complexity is really because positioning patterns are varible.... blah blah anyway I'm just going to set some rules and reasons.
+ * [Windows8-Angular](http://prasadhonrao.com/category/windows-store-apps/page/4/)
+ * [Win8-Angular](http://prasadhonrao.com/windows-store-app-development-series-part-16-data-binding-using-angularjs/)
+ * [Votr Voice Voting backeng](http://www.twilio.com/blog/2013/08/votr-part-4-angularjs-and-authentication-with-couchdb.html)
+ * [Angular Flipbook](https://flipboard.com/section/the-angularjs-magazine-bP12ur)
+ * [Angular factory with .NET Web API](http://weblogs.asp.net/dwahlin/archive/2013/08/16/using-an-angularjs-factory-to-interact-with-a-restful-service.aspx)
+ * [Angular Best Practices](http://www.youtube.com/watch?v=ZhfUv0spHCY)
+ * [Nested Scopes](http://jimhoskins.com/2012/12/14/nested-scopes-in-angularjs.html)
+ * [Yeoman.io](http://yeoman.io)
+ * [Windows8 UI icon](http://msdn.microsoft.com/en-us/library/windows/desktop/aa511280.aspx#size)
+ * [Windows8 app page layout](http://msdn.microsoft.com/en-us/library/windows/apps/hh872191.aspx)
+ * [Form Builder](https://github.com/minikomi/Bootstrap-Form-Builder) [Form Builder app](http://bootsnipp.com/forms)
+ * [ngStorage](https://github.com/gsklee/ngStorage/blob/master/ngStorage.js) - looks like a good offline sync start
 
-### Content Context
- - Content view (center of page) - cause everybody thinks as a page.
- - Content nav (left bar) - left margin because most people are right hand, so left margin is close to the thumb they hold the device with
- - Content tools (right bar) - right because that's where your right hand is... and most people use right hand to 'modify' (colapsable content tool bar)
-
-### Content Consume (User)
- - Consume nav (top bar) - top margin for user info, alerts people expect in the browser... and nav out of context
- - Consume view (top bar icon)
- - Consum tools (top bar icon)
-
-### Content Comment (user communications about content with context meta-data for future consumption)
- - Comment nav (typically a touch of the content)
- - Comment view (typically activated by comment nav)
- - Comment tools (typically tools activated as context is now the comment)
 </xmp>
 <script src="strapdown.js"></script>
 </html> 
