--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,46 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css">
+
+        <!-- CATNOTE_THUMBNAILVIEW_TESTING ----
+        ---- CATNOTE_THUMBNAILVIEW_TESTING -->
+        <script src="bower_components/angular/holder.js"></script>
+        
 </head>
   <body ng-app="catpooApp">
+  <!-- CATNOTE_TEMPLATE_ISSUE app/views/cccnav.tmpl.html - I just copied from to get this going as my template thing didn't work -->
+    <div class="navbar navbar-inverse navbar-static-top" ng-controller="cccnavCtrl">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed"> 
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a> 
+        <div class="nav-collapse collapse navbar-responsive-collapse" collapse="navCollapsed">
+          <ul class="nav nav-pills pull-left">
+            <li><a href="#/class"><i class="icon-arrow-left icon-white"></i> Back</a> </li>
+            <li><a href="#/class"><i class="icon-globe icon-white"></i> Group</a> </li>
+            <li><a href="#/class"><i class="icon-fire icon-white"></i> Admin</a> </li>
+            <li><a href="#/class"><i class="icon-retweet icon-white"></i> Sync</a> </li>
+          </ul>
+          <span class="nav">---- Some Text ----</span>
+          <ul class="nav nav-pills pull-right">
+            <li data-access-level="accessLevels.user"><a href="#/login"><i class="icon-cog icon-white"></i> Pref</a></li>
+            <li data-access-level="accessLevels.user"><a href="#/login"><i class="icon-user icon-white"></i> User</a></li>
+            <li data-access-level="accessLevels.user"><a href="#/login"><i class="icon-off icon-white"></i> Logout</a></li>
+            <li data-access-level="accessLevels.anon"><a href="#/login"><i class="icon-off icon-white"></i> Login</a></li>
+            <li><a href="#/mainmenu"><i class="icon-home icon-white"></i> Home</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+      </div><!-- /container -->
+    </div><!-- /navbar-inner -->
+  </div><!-- /navbar -->
+  <!-- CATNOTE_TEMPLATE_ISSUE -->
+  <!--
+  <div class="ng-include='views/cccnav.tmpl.html'"></div>
+  -->
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -24,7 +62,15 @@
       <script src="bower_components/es5-shim/es5-shim.js"></script>
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
-    <h1>catpooApp - Keep it in the box dude!</h1>
+
+    <!-- CATNOTE_THUMBNAILVIEW_TESTING ----
+    <h1>catpooApp - Keep it in the box dude! xxxx</h1>
+    <img data-src="./bower_components/angular/holder.js/16x16" alt="image"> 
+<img data-src="./bower_components/angular/holder.js/24x24" alt="image">
+<img data-src="./bower_components/angular/holder.js/32x32" alt="image">
+<img data-src="./bower_components/angular/holder.js/48x48" alt="image">
+<img data-src="./bower_components/angular/holder.js/256x256" alt="image">
+     ---- CATNOTE_THUMBNAILVIEW_TESTING -->
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
@@ -42,10 +88,11 @@
     </script>
     CATNOTE_GOOGLECRAP-->
 
-    <script src="bower_components/jquery/jquery.js"></script>
+    <!-- <script src="bower_components/jquery/jquery.js"></script> -->
     <script src="bower_components/angular/angular.js"></script>
-
-        <!-- build:js scripts/plugins.js -->
+    <script src="bower_components/angular/ui-bootstrap-tpls-0.5.0.min.js"></script><!-- CATNOTES: added 20130827 manually -->
+    
+        <!-- build:js scripts/plugins.js --
         <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
         <script src="bower_components/bootstrap-sass/js/bootstrap-alert.js"></script>
         <script src="bower_components/bootstrap-sass/js/bootstrap-dropdown.js"></script>
@@ -61,7 +108,7 @@
         <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js scripts/modules.js -->
+        <!-- build:js scripts/modules.js --
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -70,6 +117,10 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/cccnav.js"></script>
+        <script src="scripts/controllers/mainmenu.js"></script>
+        <script src="scripts/controllers/projects.js"></script>
+        <script src="scripts/controllers/projects/workorder.js"></script>
         <!-- endbuild -->
 </body>
 </html>
